crates/shipper-types/src/snapshots/shipper_types__tests__snapshots__receipt_no_git_context.snap
---
source: crates/shipper-types/src/lib.rs
expression: receipt
---
receipt_version: shipper.receipt.v1
plan_id: plan-nogit
registry:
  name: crates-io
  api_base: "https://crates.io"
  index_base: "https://index.crates.io"
started_at: "2025-01-15T12:00:00Z"
finished_at: "2025-01-15T12:00:00Z"
packages:
  - name: headless-lib
    version: 0.5.0
    attempts: 1
    state:
      state: published
    started_at: "2025-01-15T12:00:00Z"
    finished_at: "2025-01-15T12:00:00Z"
    duration_ms: 2000
    evidence:
      attempts: []
      readiness_checks: []
event_log_path: ".shipper/events.jsonl"
git_context: ~
environment:
  shipper_version: 0.3.0
  cargo_version: ~
  rust_version: ~
  os: windows
  arch: aarch64
execution_result: success
